bk_ida/gccida/c0/gcse_main
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gcse_main/src/gcse.c:1282:7: error: use of undeclared identifier 'arg0'
v3 = &arg0; 
      ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gcse_main/src/obj/gcse.o] Error 1
